# voice-assistant-protocol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.client-register  Dockerfile.skill-register  LICENSE  README.MD
api/: client_registry.json
benchmarks/: README.MD  benchmark.md  benchmark.sh  benchwork.py  dummy_server.py  install_deps.sh  main.py  protos.py  setup.py
protocol/: CAPABILITIES.MD  CLIENTS.MD  GENERAL.MD  README.MD  SKILLS.MD
vap-client-register/: Cargo.toml
vap-client-register-demo/: Cargo.toml
vap-client-register/src/: etc.rs  lib.rs
vap-common/: Cargo.toml
vap-common-client/: Cargo.toml
vap-common-skill/: Cargo.toml
vap-common-skill/src/: lib.rs  structures.rs
vap-common/src/: capability.rs  lib.rs
vap-python-skill/: README.MD  main.py  setup.py  test.py
vap-skill-framework/: Cargo.toml
vap-skill-framework/examples/: demo.rs
vap-skill-framework/src/: lib.rs  load.rs
vap-skill-register/: Cargo.toml
vap-skill-register-demo/: Cargo.toml
vap-skill-register-demo/src/: main.rs
vap-skill-register/examples/: demo.rs
vap-skill-register/src/: lib.rs  main.rs  queueline.rs  vars.rs
vap-skill-register/src/method_handlers/: io_helpers.rs  mod.rs
