[package]
name = "vap-skill-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vap-common-skill = {path="../vap-common-skill"}
tokio = {version = "^1.15", features = ["macros", "time"] }
fluent = "^0.16"
futures = "^0.3"
coap = {git = "https://github.com/Covertness/coap-rs"}
coap-lite = "^0.8"
rmp = "^0.8"
rmp-serde = "^0.15"
thiserror = "^1.0"
serde = "^1.0"
unic-langid = "0.9.0"