[package]
name = "vap-skill-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vap-common-skill = {path="../vap-common-skill"}
fluent = "^0.16"
fluent-langneg = "^0.13" # Language negotiation
futures = "^0.3"
coap = {git = "https://github.com/Covertness/coap-rs"}
coap-lite = "^0.9"
log = "^0.4"
rmp = "^0.8"
rmp-serde = "^1.1"
thiserror = "^1.0"
toml = "^0.5"
serde = "^1.0"
unic-langid = "0.9.0"

[dev-dependencies]
tokio = {version = "^1.15", features = ["rt"] }