[package]
name = "vap-skill-register-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vap-skill-register = {path="../vap-skill-register"}
tokio = {version = "^1.15", features = ["macros", "rt", "time"] }
rmp = "^0.8"
rmp-serde = "^0.15"