[package]
name = "vap-skill-register"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vap-common-skill = {path = "../vap-common-skill"}
tokio = {version = "^1.15", features = ["macros", "rt", "time"] }
futures = "^0.3"
coap = "^0.11"
coap-lite = "^0.7"
rmp = "^0.8"
rmp-serde = "^0.15"
thiserror = "^1.0"
libmdns = "^0.6"
serde = "^1.0"